Welcome to the NcX changelog

Changelog 20231205
• Fix object, shadow and reflection eraser in Gallery


Changelog 20231204
• Fix object eraser in Gallery


Changelog 20231203
• Add clocktransition animation


Changelog 20231202
• Fix camera-features