@@ -6,35 +6,34 @@
 setdefault magisk_support off
 setdefault ensure_root off
 setdefault import_addons off
-setdefault apex_mount off
+setdefault apex_mount on
 setdefault extraction_speed default
 setdefault permissions "0:0:0755:0644"
 setdefault devices off
 #-----------------------------------------------#
 #Your script starts here:
+#Print
+ui_print " "
 ui_print " ___________________________________"
-ui_print "       20231205 update - A52        "
+ui_print "      20240101 update - A52 4G      "
 ui_print " ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯"
-
-#Installation
-ui_print " Mounting partitions... "
-mount_all
-ui_print " Deleting old data... "
-delete_recursive /system/priv-app/PhotoEditor_Mid
-ui_print " Extracting files... "
-package_extract_dir system /system
-ui_print " Updating ROM version strings... "
-update_file_string "ro.on.core.version=20231205" "/system/build.prop"
-update_file_string "ro.on.core.build=20231205" "/system/build.prop"
-ui_print " Giving permissions... "
-set_perm 0 0 0644 /system/cameradata/camera-feature.xml
-set_perm 0 0 0644 /system/etc/floating_feature.xml
-set_perm 0 0 0644 /system/build.prop
-#Delete update
-ui_print " Deleting update from storage and update app settings... "
-delete_recursive /data/media/0/Android/data/com.mesalabs.ten.update
-delete_recursive /data/data/com.mesalabs.ten.update
-#unmount
-ui_print " Unmounting... "
+#Get device info
+ui_print " Beginning update... "
+ui_print " Unmounting all partitions... "
 umount_all
-ui_print " OTA update complete! "
+ui_print " Done... "
+ui_print " Installing super image... "
+update_zip -xz super.img.xz $(find_block super)
+ui_print " Done... "
+ui_print " Installing CSC features... "
+ui_print " Mounting optics... "
+try_mount -rw /optics
+ui_print " Mounting prism... "
+try_mount -rw /prism
+ui_print " Mounting omr... "
+try_mount -rw /omr
+cscfeature="$addons/omc/cscfeature.xml"
+omc_decoder="$addons/omcdecoder"
+. "$addons/omc_edit.sh"
+ui_print " Done... "
+ui_print " OTA Complete... "
